--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
               <!-- YOUTUBE -->
               <a
                 href="https://youtube.com/@rafitojuan"
-                class="w-9 h-9 mr-3 rounded-full flex justify-center items-center text-red-600 border border-gray-300 hover:border-red-700 hover:bg-red-600 hover:text-white"
+                class="w-9 h-9 mr-3 rounded-full flex justify-center items-center text-red-600 border border-gray-300 hover:border-red-700 hover:bg-red-600 hover:text-white duration-[300ms] delay-[2200ms] taos:[transform:perspective(2500px)_rotateX(100deg)] taos:invisible taos:[backface-visibility:hidden]"
                 data-taos-offset="100"
                 target="_blank"
               >
@@ -220,7 +220,7 @@
               <a
                 href="https://instagram.com/rafitojuan"
                 target="_blank"
-                class="w-9 h-9 mr-3 rounded-full flex justify-center items-center text-red-600 border border-gray-300 hover:border-red-500 hover:bg-[#E4405F] hover:text-white"
+                class="w-9 h-9 mr-3 rounded-full flex justify-center items-center text-red-600 border border-gray-300 hover:border-red-500 hover:bg-[#E4405F] hover:text-white duration-[600ms] delay-[2200ms] taos:[transform:perspective(2500px)_rotateX(100deg)] taos:invisible taos:[backface-visibility:hidden]"
                 data-taos-offset="100"
               >
                 <svg
@@ -835,15 +835,35 @@
             </a>
             <!-- Github END -->
           </div>
-          <p class="font-medium text-xs text-[#64748b] text-center">Dibuat oleh <a href="https://instagram.com/rafitojuan" target="_blank" class="font-bold text-main">Rafito Juan</a>, menggunakan <a href="https://tailwindcss.com" target="_blank" class="font-bold text-[#0ea5e9]">Tailwind</a> | Terinspirasi oleh <a href="https://www.instagram.com/sandhikagalih" target="_blank" class="font-body text-main">Sandhika Galih</a></p>
+          <p class="font-medium text-xs text-[#64748b] text-center">
+            Dibuat oleh
+            <a
+              href="https://instagram.com/rafitojuan"
+              target="_blank"
+              class="font-bold text-main"
+              >Rafito Juan</a
+            >, menggunakan
+            <a
+              href="https://tailwindcss.com"
+              target="_blank"
+              class="font-bold text-[#0ea5e9]"
+              >Tailwind</a
+            >
+            | Terinspirasi oleh
+            <a
+              href="https://www.instagram.com/sandhikagalih"
+              target="_blank"
+              class="font-body text-main"
+              >Sandhika Galih</a
+            >
+          </p>
         </div>
       </div>
     </footer>
     <!-- FOOTER END -->
 
-    
-    <script src="node_modules/@material-tailwind/html/scripts/dialog.js"></script>
-    <script src="node_modules/@material-tailwind/html/scripts/ripple.js"></script>
+    <script src="https://unpkg.com/@material-tailwind/html@latest/scripts/dialog.js"></script>
+    <script src="https://unpkg.com/@material-tailwind/html@latest/scripts/ripple.js"></script>
     <script src="dist/js/script.js"></script>
     <script src="https://unpkg.com/taos@1.0.5/dist/taos.js"></script>
   </body>
