update projek saya

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="dist/img/Logo-Purple.png"
+      type="image/x-icon"
+    />
     <title>rafitojuan</title>
     <link rel="stylesheet" href="dist/style.css" />
     <link
@@ -23,9 +28,20 @@
       >
         <div class="flex items-center justify-between relative">
           <div class="px-4">
-            <a href="#home" class="font-bold text-lg text-main block py-6"
-              >RJ</a
-            >
+            <a href="#home" class="font-bold text-lg text-main block py-6">
+              <img
+                class="hidden lg:block"
+                src="dist/img/Logo-2-Purple.png"
+                alt="Logo Rafito Juan"
+                width="125px"
+              />
+              <img
+                class="block lg:hidden"
+                src="dist/img/Logo-Purple.png"
+                alt="Logo Rafito Juan"
+                width="40px"
+              />
+            </a>
           </div>
           <div class="flex items-center px-4">
             <button
@@ -343,23 +359,48 @@
               class="rounded-md shadow-lg overflow-hidden duration-[1000ms] delay-[400ms] taos:[transform:perspective(2500px)_rotateY(100deg)] taos:invisible taos:[backface-visibility:hidden]"
               data-taos-offset="400"
             >
-              <img src="dist/img/2.png" alt="semudah" width="w-full" />
+              <img src="dist/img/glide.png" alt="semudah" width="w-full" />
             </div>
             <h3
               class="font-semibold text-xl text-gray-900 mt-5 mb-3 delay-[900ms] duration-[800ms] taos:translate-x-[0px] taos:opacity-0"
               data-taos-offset="200"
             >
-              University Management System
+              Glide
             </h3>
             <p
               class="font-medium text-base text-gray-500 justify-evenly delay-[1200ms] duration-[800ms] taos:translate-x-[0px] taos:opacity-0"
               data-taos-offset="150"
             >
-              Proyek ini adalah sebuah sistem manajemen universitas yang
-              dirancang menggunakan tampilan dari AdminLTE. Sistem ini bertujuan
-              untuk meningkatkan efisiensi pengelolaan universitas. Dengan
-              sistem ini, proses administrasi dan akademik diharapkan berjalan
-              lebih lancar dan terorganisir.
+              <span class="font-bold">Glide</span> adalah sebuah
+              <span class="font-bold">CRM</span> yang saya kembangkan secara
+              mandiri sebagai bagian dari persyaratan masuk ke perusahaan milik
+              <span class="font-bold">PELINDO</span>, yaitu
+              <span class="font-bold">PT Energi Pelabuhan Indonesia</span>.
+              Aplikasi ini dibangun menggunakan
+              <span class="font-bold"
+                >(BALL STACK – Bootstrap, Alpine.js, Laravel, dan
+                Livewire)</span
+              >, dipilih karena mampu mempercepat pengembangan tanpa
+              mengorbankan efisiensi dalam maintenance. Fitur utama dari
+              <span class="font-bold">Glide</span> secara konsep mirip dengan
+              <span class="font-bold">Trello</span>, namun lebih berfokus untuk
+              kebutuhan internal perusahaan. Selain manajemen proyek dan
+              <span
+                class="cursor-pointer text-blue-500 underline font-bold"
+                onclick="this.nextElementSibling.style.display=this.nextElementSibling.style.display==='none'?'inline':'none';"
+                >lihat selengkapnya...</span
+              >
+              <span style="display: none">
+                tugas,Glide juga memiliki fitur unggulan seperti: ✔️ Pengelolaan
+                proyek dan tender ✔️ Pembuatan serta manajemen divisi ✔️
+                Penugasan berbasis divisi dengan sistem notifikasi real-time ✔️
+                Sistem blog dan pengumuman untuk komunikasi internal ✔️ Fitur
+                komentar dan chat untuk kolaborasi tim ✔️ Dashboard analitik
+                untuk monitoring progres proyek ✔️ Dan masih banyak lagi! Dengan
+                Glide, perusahaan dapat mengelola proyek dengan lebih
+                terstruktur, meningkatkan kolaborasi antar tim, serta
+                mengoptimalkan efisiensi kerja dalam satu platform terpadu.
+              </span>
             </p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
